# binaural_audio

./: CMakeLists.txt  README.md  config.yaml
data/: mit_kemar_large_pinna.sofa  mit_kemar_normal_pinna.sofa
src/: all.txt  load_audio.cpp  load_audio.h  load_brir.cpp  load_brir.h  main.cpp  play_audio.cpp  play_audio.h  save_audio.cpp  save_audio.h
